chore(layout): adjust layout for datetime info container

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
                 </pre>
 </div>
 <div id="error-container" class="error-message" style="display: none;"></div>
-<div id="debug-container" class="debug-info" style="display: none;"></div>
+<div id="time-container" class="datetime-info" style="display: none;"></div>
 
 <script src="./script.js"></script>
 </body>
